--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   },
   "homepage": "https://github.com/sdockray/dat-collections#README",
   "dependencies": {
-    "pauls-dat-api": "^4.1.1",
-    "bluebird": "^3.4.7"
+    "bluebird": "^3.4.7",
+    "dat-storage": "^1.0.0",
+    "hyperdiscovery": "^1.3.0",
+    "hyperdrive": "^9.1.0",
+    "pauls-dat-api": "^4.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -44,10 +47,6 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
     "istanbul": "^1.0.0-alpha.2",
-    "mocha": "^3.3.0",
-    "tape": "^4.6.3",
-    "hyperdrive": "^9.1.0",
-    "hyperdiscovery": "^1.3.0",
-    "dat-storage": "^1.0.0"
+    "mocha": "^3.3.0"
   }
 }
