--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dat-storage": "^1.0.0",
     "hyperdiscovery": "^1.3.0",
     "hyperdrive": "^9.1.0",
+    "lodash": "^4.17.4",
     "pauls-dat-api": "^4.2.1"
   },
   "devDependencies": {
